Align user menu correctly

--- a/frontend/app/stylesheets/base/dropdown.scss
+++ b/frontend/app/stylesheets/base/dropdown.scss
@@ -140,8 +140,7 @@ $dropdown-arrow-size: 8px;
     list-style: none;
     margin: 0;
     padding: 0;
-    background: #5b667b;
-    border: 1px solid #5b667b;
+    background: #5c5981;
     min-width: 160px;
 
     &.right-aligned {
